; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/sysdev/extr_i8259.c_i8259_mask_irq.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/sysdev/extr_i8259.c_i8259_mask_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"i8259_mask_irq(%d)\0A\00", align 1
@i8259_lock = common dso_local global i32 0, align 4
@cached_21 = common dso_local global i32 0, align 4
@cached_A1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @i8259_mask_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i8259_mask_irq(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca i64, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %4 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %5 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @pr_debug(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load i64, i64* %3, align 8
  %9 = call i32 @raw_spin_lock_irqsave(i32* @i8259_lock, i64 %8)
  %10 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %11 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp slt i32 %12, 8
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %16 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = shl i32 1, %17
  %19 = load i32, i32* @cached_21, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* @cached_21, align 4
  br label %29

21:                                               ; preds = %1
  %22 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %23 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = sub nsw i32 %24, 8
  %26 = shl i32 1, %25
  %27 = load i32, i32* @cached_A1, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* @cached_A1, align 4
  br label %29

29:                                               ; preds = %21, %14
  %30 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %31 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @i8259_set_irq_mask(i32 %32)
  %34 = load i64, i64* %3, align 8
  %35 = call i32 @raw_spin_unlock_irqrestore(i32* @i8259_lock, i64 %34)
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32) #1

declare dso_local i32 @raw_spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @i8259_set_irq_mask(i32) #1

declare dso_local i32 @raw_spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
